# fntools

./: .travis.yml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: auto_tuple.rs  constant.rs  flip.rs  flip_tuple.rs  lib.rs  local_macros.rs  macro_def.rs  sealed.rs  tuple_append.rs  tuple_pop.rs  tuple_push.rs  tuple_take.rs  unstable.rs  value.rs
src/flip/: flip_args.rs  flip_full.rs  flip_output.rs  mod.rs
src/stable/: chain.rs  compose.rs  flip.rs  product.rs  unit.rs  value.rs
src/tuple/: append.rs  as_ref.rs  at_least_2.rs  auto_tuple.rs  concat.rs  flip.rs  pop.rs  push.rs  take.rs
src/unstable/: chain.rs  compose.rs  curry.rs  ext.rs  flip.rs  mod.rs  supply.rs  unit.rs  untuple.rs  value.rs
