[package]
name = "fntools"
version = "0.1.0"
authors = ["Waffle <wafflelapkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
# no features by default
default = []

# Turns _OFF_ features that depend on nightly rust
stable = []
