[package]
name = "fntools"
version = "0.1.0"
authors = ["Waffle <wafflelapkin@gmail.com>"]
edition = "2018"

[dependencies]
fntools_proc_macro = { path = "../fntools-proc-macro/" }

[features]
# no features by default
default = []

# Turns _OFF_ features that depend on nightly rust
stable = []
# Add features that depend on tuple concatenation (and tuple concatenation itself)
concat = []
